# cuai

./: .gitignore  README.md  main.py  pyproject.toml  原稿.md  発表資料.md
app_client/: package-lock.json  package.json
app_client/src/: App.tsx  vite-env.d.ts
app_client/src/components/: AnalysisScreen.tsx  HistoryScreen.tsx  Navigation.tsx  SettingsScreen.tsx  UploadScreen.tsx
app_client/src/types/: pywebview.d.ts
app_ml/: main.py
app_ml/data/: datamodule.py
app_ml/models/: patchcore.py
app_ml/utils/: index.py
backend/: api.py  create_model.py  dataset.py  inference.py  main.py  models.py  pyproject.toml  utils.py
config/: settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AnalysisScreen.tsx  HistoryScreen.tsx  Navigation.tsx  SettingsScreen.tsx  UploadScreen.tsx
