[project]
name = "cuai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
